<resources>
    <string name="app_name">Vitatake</string>
    <string name="btnWelcome_text">Lets get started</string>
    <!-- User Calibration -->
    <string name="userCal_title">User calibration</string>
    <string name="userCal_personal_info">Personal Information</string>
    <string name="userCal_age">Age</string>
    <string name="userCal_gender">Gender</string>
    <string name="userCal_physical_attributes">Physical Attributes</string>
    <string name="userCal_height">Height</string>
    <string name="userCal_weight">Weight</string>
    <string name="userCal_finish">Finish</string>
    <string name="userCal_delimiter">--------------------------------------</string>
    <string name="title_activity_tracker">TrackerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Tracker -->
    <string name="tracker_tab_vitamin">Vitamins</string>
    <string name="tracker_tab_food">Food Intake</string>
    <!-- Vitamins -->
    <string name="vitamin_A">Vitamin A</string>
    <string name="vitamin_C">Vitamin C</string>
    <string name="vitamin_D">Vitamin D</string>
    <string name="vitamin_E">Vitamin E</string>
    <string name="vitamin_K">Vitamin K</string>
    <string name="vitamin_B1">Vitamin B1</string>
    <string name="vitamin_B2">Vitamin B2</string>
    <string name="vitamin_B3">Vitamin B3</string>
    <string name="vitamin_B5">Vitamin B5</string>
    <string name="vitamin_B6">Vitamin B6</string>
    <string name="vitamin_B7">Vitamin B7</string>
    <string name="vitamin_B9">Vitamin B9</string>
    <string name="vitamin_B12">Vitamin B12</string>
    <!-- Tracker buttons -->
    <string name="tracker_recalibrate">Recalibrate calculator</string>
    <string name="tracker_progress">See progress</string>
    <!-- Nutrients -->
    <string name="nutrient_calories">Calories</string><!-- important -->
    <string name="nutrient_fat">Fat</string><!-- important -->
    <string name="nutrient_sodium">Sodium</string>
    <string name="nutrient_choline">Choline</string>
    <string name="nutrient_calcium">Calcium</string>
    <string name="nutrient_iron">Iron</string>
    <string name="nutrient_magnesium">Magnesium</string>
    <string name="nutrient_manganese">Manganese</string>
    <string name="nutrient_potassium">Potassium</string>
    <string name="nutrient_selenium">Selenium</string>
    <string name="nutrient_zink">Zink</string>
    <string name="nutrient_protein">Protein</string><!-- important -->
    <string name="nutrient_carbohydrate">Carbohydrate</string><!-- important -->
    <string name="nutrient_fiber">Fiber</string>
    <string name="nutrient_sugars">Sugars</string>
    <!-- Progress -->
    <string name="progress_toolbar_title">Progress</string>
</resources>