<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/VitOffWhite"
        android:orientation="horizontal"
        tools:context=".UserCalibratorActivity"
        tools:menu="@menu/menu_user_calibrator">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@color/VitBrown"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/glTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/userCal_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/userCal_title"
                android:textColor="@color/black"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/glPersonal_information"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/glTitle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/userCal_personal_info"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:paddingStart="60dp"
                    android:paddingEnd="50dp"
                    android:text="@string/userCal_age"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <SeekBar
                    android:id="@+id/sbUser_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="51"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:progress="0"
                    android:progressTint="@color/VitDarkPurple" />

                <TextView
                    android:id="@+id/tvAge_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingEnd="30dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="70dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:paddingStart="60dp"
                    android:paddingEnd="25dp"
                    android:text="@string/userCal_gender"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/spinGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/VitDarkGray"
                    android:entries="@array/spinGenderItems"
                    android:minWidth="200dp"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDelimiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userCal_delimiter"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/layPhysical_atributes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glPersonal_information" />

        <LinearLayout
            android:id="@+id/layPhysical_atributes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/glPhysical_atributes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDelimiter">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/userCal_physical_attributes"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:paddingStart="60dp"
                    android:paddingEnd="31dp"
                    android:text="@string/userCal_height"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/etHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/VitDarkGray"
                    android:fontFamily="@font/roboto"
                    android:hint="cm"
                    android:inputType="number"
                    android:minWidth="200dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:paddingStart="60dp"
                    android:paddingEnd="28dp"
                    android:text="@string/userCal_weight"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/VitDarkGray"
                    android:fontFamily="@font/roboto"
                    android:hint="kg"
                    android:inputType="number"
                    android:minWidth="200dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/VitDarkPurple"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/glEnd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glPhysical_atributes">

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/VitYellow"
                android:fontFamily="@font/roboto_medium"
                android:minWidth="150dp"
                android:text="@string/userCal_finish"
                android:textColor="@color/black" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="71dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glPersonal_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="356dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glPhysical_atributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="660dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="737dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>